--- a/CongressionalDeception/Templates/survey.html
+++ b/CongressionalDeception/Templates/survey.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% block main %}
-{% include "dropdown.html" %}
+{% with session=session, topic=topic, committees=committees, permalink=permalink %}
+    {% include "dropdown.html" %}
+{% endwith %}
 <div id="content" class="main layout-2-col-left">
     <div id="content1">
         <h2>Survey page {{ id-2 }} of 20</h2>
