--- a/CongressionalDeception/Templates/base.html
+++ b/CongressionalDeception/Templates/base.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="https://www.binghamton.edu/favicon.png">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/styles.css') }}">
-    <title>Survey</title>
+    <title>CLAPP Survey</title>
 </head>
 
 <body>
@@ -27,8 +27,7 @@
                 <img src="https://www.binghamton.edu/assets/img/logo/binghamton-university.png" alt="Binghamton University: The State University of New York" class="iconography">
                 <!--<a href="https://www.binghamton.edu/">Binghamton University: The State University of New York</a>-->
             </div>
-            <div id="section-header-inline">Deception in Public Speech
-            </div>
+            <div id="section-header-inline">Computational Linguistics for Analyzing Public Proceedings</div>
         </div>
     </header>
     {% block main %}
